# clangalang

./: CMakeLists.txt  README.md  git_cmds
beej_net_prog/accept/: accept.c
beej_net_prog/bind/: bind.c
beej_net_prog/close_shutdown/: close_shutdown.c
beej_net_prog/connect/: connect.c
beej_net_prog/getnames/: gethostname.c  getpeername.c
beej_net_prog/ipstructs/: ipstructs.c
beej_net_prog/listen/: listen.c
beej_net_prog/send_receive/: send_receive.c
beej_net_prog/sendto_recvfrom/: sendto_recvfrom.c
beej_net_prog/showip/: showip.c
beej_net_prog/sockets/: sockets.c
bermuda/: bermuda.c
cards/: cards.c
categorize/: categorize.c  old_categorize.c
copying_literals/: copying_literals.c
csv_to_json/: csv_to_json.c  gpsdata.csv
encryptor/: encryptor.c  encryptor.h
message_hider/: message_hider.c
numbers/: numbers.c
pizza_pieces/: pizza_pieces.c
pointers/: pointers.c
reverse_string/: reverse_string.c
sailing/: sailing.c
searching_string/: searching_strings.c
totaller/: totaller.c  totaller.h
using_fgets/: using_fgets.c
