cmake_minimum_required(VERSION 3.20)
project(clangalang C)

set(CMAKE_C_STANDARD 99)

add_executable(clangalang main.c)
add_executable(bind beej_net_prog/bind/bind.c)
add_executable(connect beej_net_prog/connect/connect.c)
add_executable(ipstructs beej_net_prog/ipstructs/ipstructs.c)
add_executable(listen beej_net_prog/listen/listen.c)
add_executable(showip beej_net_prog/showip/showip.c)
add_executable(sockets beej_net_prog/sockets/sockets.c)
add_executable(bermuda bermuda/bermuda.c)
add_executable(cards cards/cards.c)
add_executable(categorize categorize/categorize.c)
add_executable(old_categorize categorize/old_categorize.c)
add_executable(copying_literals copying_literals/copying_literals.c)
add_executable(geo2json csv_to_json/csv_to_json.c)
add_executable(encryptor encryptor/encryptor.c)
add_executable(message_hider message_hider/message_hider.c)
add_executable(numbers numbers/numbers.c)
add_executable(pizza_pieces pizza_pieces/pizza_pieces.c)
add_executable(pointers pointers/pointers.c)
add_executable(reverse_string reverse_string/reverse_string.c)
add_executable(sailing sailing/sailing.c)
add_executable(searching_string searching_string/searching_strings.c)
add_executable(totaller totaller/totaller.c)
add_executable(using_fgets using_fgets/using_fgets.c)
